[tool.poetry]
name = "nostra"
version = "0.1.0"
description = ""
authors = ["Scott Mandrell <sdmandrell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.8.2"
numpy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
cachetools = "^5.4.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
